---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export type EnumAdjacent = {
	type: "Unit"
} | {
	type: "EmptyUnnamed"
	content: []
} | {
	type: "SingleUnnamed"
	content: number
} | {
	type: "DoubleUnnamed"
	content: [boolean, string]
} | {
	type: "EmptyNamed"
	content: Record<string, never>
} | {
	type: "SingleNamed"
	content: {
		value: number
	}
} | {
	type: "MultiNamed"
	content: {
		value_1: number
		value_2: string
	}
} | {
	type: "FlattenedStruct"
	content: {
		name: string
	} & StructSimple
};
